# Xos

./: .env  .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
xos/: Cargo.toml
xtask/: .env  Cargo.toml  build.rs
xtask/config/: log4rs.yml
xtask/src/: arch.rs  constant.rs  constants.rs  errors.rs  main.rs
xtask/src/actions/: git_proxy.rs  qemu.rs  shadow.rs
