[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["workerwork <workerwork@qq.com>"]
# 此文件服务于 shadow
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# structopt = "0.3"   # clap 已经包含了它的功能，不再更新，废弃
clap = { version = "3.2", features = ["derive"] }
cmd_lib = "1.3"
dotenv = "0.15"
log = "0.4"
log4rs = "1.1"

# 在 riscv64 std 下支持不好
[target.'cfg(not(target_arch = "riscv64"))'.dependencies]
shadow-rs = "0.16"

[target.'cfg(not(target_arch = "riscv64"))'.build-dependencies]
shadow-rs = "0.16"
